home screen loading icon spacing fix

--- a/webApp/client/src/components/Home/style.css
+++ b/webApp/client/src/components/Home/style.css
@@ -38,6 +38,7 @@
     justify-content: center;
     align-items: center;
     cursor: default;
+    margin-left: 2rem;
 }
 
 .card-button {
